--- a/jablko_weather.html
+++ b/jablko_weather.html
@@ -20,11 +20,11 @@
 			const temp_color = $MODULE_NAME.interpolate_color(hot_color, cold_color, 30, 0, temp_in_c);
 			const feels_color = $MODULE_NAME.interpolate_color(hot_color, cold_color, 30, 0, feels_in_c);
 
-			const temp_value = document.getElementById("weather_temp");
-			const feels_like_value = document.getElementById("weather_feels_like");
-			const humidity_value = document.getElementById("weather_humidity");
-			const description_value = document.getElementById("weather_description");
-			const wind_value = document.getElementById("weather_wind");
+			const temp_value = document.getElementById("$MODULE_NAME_temp");
+			const feels_like_value = document.getElementById("$MODULE_NAME_feels_like");
+			const humidity_value = document.getElementById("$MODULE_NAME_humidity");
+			const description_value = document.getElementById("$MODULE_NAME_description");
+			const wind_value = document.getElementById("$MODULE_NAME_wind");
 
 			temp_value.textContent = ((9 / 5 * temp_in_c) + 32).toFixed(1).toString() + " °F (" + temp_in_c.toFixed(1) + " °C)";
 			temp_value.style.color = "rgb(" + temp_color[0] + "," + temp_color[1] + "," + temp_color[2] + ")";
@@ -46,7 +46,7 @@
 			wind_value.textContent = json_response.current.wind_speed + " m/s from " + json_response.current.wind_deg + "° N";
 			wind_value.style.color = "rgb(" + wind_color[0] + "," + wind_color[1] + "," + wind_color[2] + ")";
 
-			const hourly_table = document.getElementById("weather_hourly_table").getElementsByTagName("tbody")[0];
+			const hourly_table = document.getElementById("$MODULE_NAME_hourly_table").getElementsByTagName("tbody")[0];
 			for (var i = 1; i < 13; i++) {
 				var x = new Date(json_response.hourly[i].dt * 1000);
 				console.log(x.getHours());
@@ -130,34 +130,34 @@ th {
 	<div>
 		<div class="label_value_pair">
 			<div class="label">Temp:</div>
-			<div id="weather_temp" class="value">N/A</div>
+			<div id="$MODULE_NAME_temp" class="value">N/A</div>
 		</div>
 
 		<div class="label_value_pair">
 			<div class="label">Feels Like:</div>
-			<div id="weather_feels_like" class="value">N/A</div>
+			<div id="$MODULE_NAME_feels_like" class="value">N/A</div>
 		</div>
 
 		<div class="label_value_pair">
 			<div class="label">Humidity:</div>
-			<div id="weather_humidity" class="value">N/A</div>
+			<div id="$MODULE_NAME_humidity" class="value">N/A</div>
 		</div>
 
 		<div class="label_value_pair">
 			<div class="label">Description:</div>
-			<div id="weather_description" class="value">N/A</div>
+			<div id="$MODULE_NAME_description" class="value">N/A</div>
 		</div>
 
 		<div class="label_value_pair">
 			<div class="label">Wind:</div>
-			<div id="weather_wind" class="value">N/A</div>
+			<div id="$MODULE_NAME_wind" class="value">N/A</div>
 		</div>
 	</div>
 
 	<h2>Forecast</h2>
 
 	<div style="display: flex; justify-content: center; height: 200px; overflow-y: scroll;">
-		<table id="weather_hourly_table" style="width: 90%; border-collapse: separate; border-spacing: 0px" cellpadding="0" cellspacing="0" border="0"> 
+		<table id="$MODULE_NAME_hourly_table" style="width: 90%; border-collapse: separate; border-spacing: 0px" cellpadding="0" cellspacing="0" border="0"> 
 			<thead>
 				<tr>
 				<th>Hr</th>
