--- a/jablko_weather.html
+++ b/jablko_weather.html
@@ -17,7 +17,7 @@
 			const hot_color = [232, 65, 24];
 			const cold_color = [0, 151, 230];
 
-			const temp_color = $MODULE_NAME.interpolate_color(hot_color, cold_color, 30, 0, temp_in_c);
+			const temp_color = $MODULE_NAME.interpolate_color(hot_color, cold_color, 30, 0, temp_in_c - 10);
 			const feels_color = $MODULE_NAME.interpolate_color(hot_color, cold_color, 30, 0, feels_in_c);
 
 			const temp_value = document.getElementById("$MODULE_NAME_temp");
@@ -105,6 +105,25 @@ th {
 	border-bottom: 2px solid #0097e6;
 	margin-bottom: 2px;
 }
+
+#$MODULE_NAME_hourly_table > tbody > tr > td:first-child {
+	border-radius: 5px 0px 0px 5px;
+}
+
+#$MODULE_NAME_hourly_table > tbody > tr > td:last-child {
+	border-radius: 0px 5px 5px 0px;
+}
+
+#$MODULE_NAME_hourly_table > tbody > tr:nth-child(even) {
+	background-color: var(--color-background);	
+}
+
+#$MODULE_NAME_hourly_table > thead > tr > th {
+	position: sticky;
+	top: 0;
+	z-index: 900;
+	background-color: var(--color-background);
+}
 </style>
 <div id="$MODULE_NAME" class="module_card">
 	<div class="module_header">
@@ -156,14 +175,14 @@ th {
 
 	<h2>Forecast</h2>
 
-	<div style="display: flex; justify-content: center; height: 200px; overflow-y: scroll;">
-		<table id="$MODULE_NAME_hourly_table" style="width: 90%; border-collapse: separate; border-spacing: 0px" cellpadding="0" cellspacing="0" border="0"> 
+	<div style="display: flex; justify-content: center; height: 200px; overflow: scroll; margin-top: 5px;">
+		<table id="$MODULE_NAME_hourly_table" style="width: 90%; margin-top: 0px; position: relative; border-collapse: separate; border-spacing: 0px" cellpadding="0" cellspacing="0" border="0"> 
 			<thead>
-				<tr>
-				<th>Hr</th>
-				<th>Temp</th>
-				<th>Feels</th>
-				<th>Description</th>
+				<tr style="background-color: var(--color-background)">
+					<th style="padding: 5px; border-radius: 5px 0px 0px 0px;">Hr</th>
+					<th>Temp</th>
+					<th>Feels</th>
+					<th style="padding: 5px; border-radius: 0px 5px 0px 0px;">Description</th>
 				</tr>
 			</thead>
 			<tbody>
