Now use hsl interpolation from jablko library:

--- a/jablko_weather.html
+++ b/jablko_weather.html
@@ -16,9 +16,8 @@
 
 			const hot_color = [232, 65, 24];
 			const cold_color = [0, 151, 230];
-
-			const temp_color = $MODULE_NAME.interpolate_color(hot_color, cold_color, 30, 0, temp_in_c - 10);
-			const feels_color = $MODULE_NAME.interpolate_color(hot_color, cold_color, 30, 0, feels_in_c);
+			const temp_color = jablko.interpolate_rgb(0, cold_color, 30, hot_color, temp_in_c);
+			const feels_color = jablko.interpolate_rgb(0, cold_color, 30, hot_color, feels_in_c);
 
 			const temp_value = document.getElementById("$MODULE_NAME_temp");
 			const feels_like_value = document.getElementById("$MODULE_NAME_feels_like");
@@ -34,7 +33,7 @@
 
 			const high_humidity_color = [0, 151, 230];
 			const low_humidity_color = [251, 197, 49];
-			const humidity_color = $MODULE_NAME.interpolate_color(high_humidity_color, low_humidity_color, 100, 0, json_response.current.humidity);
+			const humidity_color = jablko.interpolate_rgb(0, low_humidity_color, 100, high_humidity_color, json_response.current.humidity);
 			humidity_value.textContent = json_response.current.humidity + "%";
 			humidity_value.style.color = "rgb(" + humidity_color[0] + "," + humidity_color[1] + "," + humidity_color[2] + ")";
 
@@ -42,7 +41,7 @@
 
 			const high_wind_color = [68, 189, 50];
 			const low_wind_color = [0, 168, 255];
-			const wind_color = $MODULE_NAME.interpolate_color(high_wind_color, low_wind_color, 4, 0, json_response.current.wind_speed);
+			const wind_color = jablko.interpolate_rgb(0, low_wind_color, 4, high_wind_color, json_response.current.wind_speed);
 			wind_value.textContent = json_response.current.wind_speed + " m/s from " + json_response.current.wind_deg + "° N";
 			wind_value.style.color = "rgb(" + wind_color[0] + "," + wind_color[1] + "," + wind_color[2] + ")";
 
@@ -63,20 +62,6 @@
 				row.insertCell(2).innerHTML = "<p>" + hourly_feels.f.toFixed(0) + " °F<br>" + hourly_feels.c.toFixed(0) + " °C</p>";
 				row.insertCell(3).innerHTML = "<p>" + json_response.hourly[i].weather[0].description + "</p>";
 			}
-		},
-		interpolate_color: function(high_color, low_color, high_value, low_value, value) {
-			var interp = [0, 0, 0];
-
-			if (value < low_value) {
-				return low_color;
-			} else if (value > high_value) {
-				return high_color;
-			}
-
-			for (var i = 0; i < high_color.length; i++) {
-				interp[i] = Math.floor((high_color[i] - low_color[i]) / (high_value - low_value) * (value - low_value) + low_color[i]);
-			}
-			return interp;
 		},
 		kelvin_to_temp: function(temp) {
 			const temp_in_c = temp - 273.15;
